- Added cookie page to webportal settings. - Improved email send. - Contacts now can delte their accounts. - Added btn-warning CSS class.

--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -70,6 +70,12 @@ p {
     margin-bottom: 10px;
 }
 
+.btn-warning {
+    background-color: #E4A731;
+    border-color: #E4A731;
+    color: black;
+}
+
 .section-btn {
     margin-bottom: 5px;
 }
