--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -2,7 +2,7 @@
     <form method="get">
         <input type="hidden" name="okCookies" value="TRUE"/>
         <div class="toast cookies text-center">
-            {{ cookiesPage.description | raw }} <button type="submit" class="btn btn-sm">{{ i18n.trans('accept') }}</button>
+            {{ cookiesPage.description | raw }} <button type="submit" class="btn btn-sm btn-warning">{{ i18n.trans('accept') }}</button>
             <a href="{{ cookiesPage.url('public') }}">{{ i18n.trans('read-more') }}</a>
         </div>
     </form>
@@ -162,20 +162,22 @@
                 <div class="modal-title h5">
                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ i18n.trans('email') }}
                 </div>
-                <p>
+                <p class="mb-0">
                     <small>{{ fsc.contact.email }}</small>
                 </p>
             </div>
             <div class="modal-body">
-                <div class="content">
-                    <a href="{{ constant('FS_ROUTE') }}/EditProfile" class="btn btn-block btn-success">
-                        <i class="fas fa-edit fa-fw" aria-hidden="true"></i> {{ i18n.trans('edit') }}
-                    </a>
-                    <div class="divider"></div>
-                    <a href="{{ constant('FS_ROUTE') }}/?public_logout=TRUE" class="btn btn-block btn-error">
-                        <i class="fas fa-sign-out-alt fa-fw" aria-hidden="true"></i> {{ i18n.trans('logout') }}
-                    </a>
-                </div>
+                <a href="{{ constant('FS_ROUTE') }}/EditProfile" class="btn btn-block btn-success">
+                    {{ i18n.trans('my-profile') }}
+                </a>
+                <p class="form-input-hint mb-2 mt-2">
+                    {{ i18n.trans('my-profile-p') }}
+                </p>
+            </div>
+            <div class="modal-footer">
+                <a href="{{ constant('FS_ROUTE') }}/?public_logout=TRUE" class="btn btn-block btn-error">
+                    {{ i18n.trans('logout') }}
+                </a>
             </div>
         </div>
     </div>
