- Added access denied template. - Employees should now login from the employees section located at the bottom of the page. - New contacts are now created disabled and only be enabled when email is confirmed.

--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -104,6 +104,7 @@
                 {{ Macros.logoutModal(i18n, fsc) }}
             {% elseif fsc.user == false %}
                 {{ Macros.loginModal(i18n, appSettings, fsc) }}
+                {{ Macros.userLoginModal(i18n, appSettings, fsc) }}
             {% endif %}
         {% endblock %}
         {% block footer %}
@@ -118,6 +119,16 @@
                     </div>
                     <div class="columns">
                         {{ Macros.footerMenu(fsc) }}
+                        {% if fsc.user is empty and fsc.contact is empty %}
+                            <div class="column col-md-3 col-sm-12">
+                                <dl>
+                                    <dt>{{ i18n.trans('employees') }}</dt>
+                                    <dd>
+                                        <a href="#" onclick="return showModal('userLoginModal');">{{ i18n.trans('login') }}</a>
+                                    </dd>
+                                </dl>
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="columns">
                         <div class="column">
