--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -31,107 +31,27 @@
 {% endmacro %}
 
 {% macro loginModal(i18n, appSettings, fsc) %}
-    <script>
-        function showLoginModalTab(showName, hideName) {
-            var showBtn = document.getElementById("btnLoginModal" + showName);
-            showBtn.classList.add("active");
-            var showDiv = document.getElementById("divLoginModal" + showName);
-            showDiv.classList.remove("d-hide");
-            var hideBtn = document.getElementById("btnLoginModal" + hideName);
-            hideBtn.classList.remove("active");
-            var hideDiv = document.getElementById("divLoginModal" + hideName);
-            hideDiv.classList.add("d-hide");
-            return false;
-        }
-    </script>
     <div class="modal modal-sm" id="loginModal">
         <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('loginModal');"></a>
         <div class="modal-container">
             <div class="modal-header">
                 <a href="#close" onclick="return hideModal('loginModal');" class="btn btn-clear float-right" aria-label="Close"></a>
-                <ul class="tab tab-block">
-                    <li class="tab-item">
-                        <a href="#" id="btnLoginModalCustomers" class="active" onclick="return showLoginModalTab('Customers', 'Employees');">{{ i18n.trans('customers') }}</a>
-                    </li>
-                    <li class="tab-item">
-                        <a href="#" id="btnLoginModalEmployees" onclick="return showLoginModalTab('Employees', 'Customers');">{{ i18n.trans('employees') }}</a>
-                    </li>
-                </ul>
+                <div class="modal-title h5">{{ i18n.trans('login') }}</div>
             </div>
             <div class="modal-body">
                 <div class="content">
-                    <div id="divLoginModalCustomers">
-                        {% set facebook = appSettings.get('webportal','fbappid','') %}
-                        {% set google = appSettings.get('webportal','googleappid','') %}
-                        {% set twitter = appSettings.get('webportal','twitterappid','') %}
-                        {% set fsLogin = appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
-                        {% if fsLogin %}
-                            <form action="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs" method="post" class="form">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">
-                                            <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
-                                        </span>
-                                        <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder="{{ i18n.trans('email') }}" required="true" autocomplete="off"/>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <span class="input-group-addon">
-                                            <i class="fas fa-key fa-fw" aria-hidden="true"></i>
-                                        </span>
-                                        <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder="{{ i18n.trans('password') }}"/>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-switch">
-                                        <input type="checkbox" name="fsContactPassForgot" value="true"/>
-                                        <i class="form-icon"></i>
-                                        {{ i18n.trans('webportal-forgotten-password') }}
-                                    </label>
-                                </div>
-                                <button type="submit" class="btn btn-block btn-primary">
-                                    {{ i18n.trans('login') }}
-                                </button>
-                                {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
-                                    <p class="form-input-hint mb-2 mt-2">{{ i18n.trans('do-not-have-account') }}</p>
-                                    <a class="btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
-                                        {{ i18n.trans('register-me') }}
-                                    </a>
-                                {% endif %}
-                            </form>
-                            {% if facebook or google or twitter %}
-                                <p class="form-input-hint mb-2 mt-2">{{ i18n.trans('login-with-social-or-email') }}</p>
-                            {% endif %}
-                        {% endif %}
-                        {% if facebook or google or twitter %}
-                            <div class="btn-group btn-group-block">
-                                {% if facebook %}
-                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
-                                        <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
-                                    </a>
-                                {% endif %}
-                                {% if google %}
-                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
-                                        <i class="fab fa-google fa-fw" aria-hidden="true"></i>
-                                    </a>
-                                {% endif %}
-                                {% if twitter %}
-                                    <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
-                                        <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
-                                    </a>
-                                {% endif %}
-                            </div>
-                        {% endif %}
-                    </div>
-                    <div id="divLoginModalEmployees" class="d-hide">
-                        <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
+                    {% set facebook = appSettings.get('webportal','fbappid','') %}
+                    {% set google = appSettings.get('webportal','googleappid','') %}
+                    {% set twitter = appSettings.get('webportal','twitterappid','') %}
+                    {% set fsLogin = appSettings.get('webportal','allowlogincontacts','false') == 'true' %}
+                    {% if fsLogin %}
+                        <form action="{{ constant('FS_ROUTE') }}/HybridLogin?prov=fs" method="post" class="form">
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-addon">
-                                        <i class="fas fa-user fa-fw" aria-hidden="true"></i>
+                                        <i class="fas fa-envelope fa-fw" aria-hidden="true"></i>
                                     </span>
-                                    <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                                    <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder="{{ i18n.trans('email') }}" required="true" autocomplete="off"/>
                                 </div>
                             </div>
                             <div class="form-group">
@@ -139,14 +59,49 @@
                                     <span class="input-group-addon">
                                         <i class="fas fa-key fa-fw" aria-hidden="true"></i>
                                     </span>
-                                    <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                                    <input type="password" name="fsContactPass" id="fsContactPass" class="form-input" maxlength="50" placeholder="{{ i18n.trans('password') }}"/>
                                 </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="form-switch">
+                                    <input type="checkbox" name="fsContactPassForgot" value="true"/>
+                                    <i class="form-icon"></i>
+                                    {{ i18n.trans('webportal-forgotten-password') }}
+                                </label>
                             </div>
                             <button type="submit" class="btn btn-block btn-primary">
                                 {{ i18n.trans('login') }}
                             </button>
+                            {% if appSettings.get('webportal','allownewregistrations','false') == 'true' %}
+                                <p class="form-input-hint mb-2 mt-2">{{ i18n.trans('do-not-have-account') }}</p>
+                                <a class="btn btn-block btn-success" href="{{ constant('FS_ROUTE') }}/PortalRegisterMe">
+                                    {{ i18n.trans('register-me') }}
+                                </a>
+                            {% endif %}
                         </form>
-                    </div>
+                        {% if facebook or google or twitter %}
+                            <p class="form-input-hint mb-2 mt-2">{{ i18n.trans('login-with-social-or-email') }}</p>
+                        {% endif %}
+                    {% endif %}
+                    {% if facebook or google or twitter %}
+                        <div class="btn-group btn-group-block">
+                            {% if facebook %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=facebook&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fab fa-facebook fa-fw" aria-hidden="true"></i>
+                                </a>
+                            {% endif %}
+                            {% if google %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=google&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fab fa-google fa-fw" aria-hidden="true"></i>
+                                </a>
+                            {% endif %}
+                            {% if twitter %}
+                                <a href="{{ constant('FS_ROUTE') }}/HybridLogin?prov=twitter&return={{ fsc.url() }}" class="btn btn-block">
+                                    <i class="fab fa-twitter fa-fw" aria-hidden="true"></i>
+                                </a>
+                            {% endif %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -255,5 +210,42 @@
                 {% endif %}
             {% endfor %}
         </ul>
+    </div>
+{% endmacro %}
+
+{% macro userLoginModal(i18n, appSettings, fsc) %}
+    <div class="modal modal-sm" id="userLoginModal">
+        <a href="#close" class="modal-overlay" aria-label="Close" onclick="return hideModal('userLoginModal');"></a>
+        <div class="modal-container">
+            <div class="modal-header">
+                <a href="#close" onclick="return hideModal('userLoginModal');" class="btn btn-clear float-right" aria-label="Close"></a>
+                <div class="modal-title h5">{{ i18n.trans('login') }}</div>
+            </div>
+            <div class="modal-body">
+                <div class="content">
+                    <form action="{{ constant('FS_ROUTE') }}/" method="post" class="form">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fas fa-user fa-fw" aria-hidden="true"></i>
+                                </span>
+                                <input type="text" name="fsNick" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('user') }}" required="" autocomplete="off"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fas fa-key fa-fw" aria-hidden="true"></i>
+                                </span>
+                                <input type="password" name="fsPassword" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('password') }}" required="" autocomplete="off"/>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-block btn-primary">
+                            {{ i18n.trans('login') }}
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 {% endmacro %}
