--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -54,6 +54,10 @@ h2, h3, h4, h5 {
     word-wrap: break-word;
 }
 
+.menu-big {
+    width: 285px;
+}
+
 .navbar-top {
     background-color: #F8F9FA;
     border-bottom: 1px solid #E0E3E7;
