Removed unnecesary code to change contact password.

--- a/View/Section/EditProfile.html.twig
+++ b/View/Section/EditProfile.html.twig
@@ -99,7 +99,7 @@
                                 <span class="input-group-addon">
                                     <i class="fas fa-key fa-fw"></i>
                                 </span>
-                                <input class="form-input" type="password" name="password" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                                <input class="form-input" type="password" name="newPassword" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                 <span class="input-group-addon">
                                     <i class="fas fa-key fa-fw"></i>
                                 </span>
-                                <input class="form-input" type="password" name="re-password" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
+                                <input class="form-input" type="password" name="newPassword2" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
                             </div>
                         </div>
                     </div>
