Minor fix with post-office-box label.

--- a/View/Section/EditProfile.html.twig
+++ b/View/Section/EditProfile.html.twig
@@ -56,7 +56,7 @@
                     </div>
                     <div class="column col-3 col-sm-12">
                         <div class="form-group mb-2">
-                            {{ i18n.trans('postalmail') }}
+                            {{ i18n.trans('post-office-box') }}
                             <input class="form-input" type="text" name="apartado" value="{{ fsc.contact.apartado }}" maxlength="10" placeholder="{{ i18n.trans('optional') }}" autocomplete="off"/>
                         </div>
                     </div>
